Feat: Swagger API & Test for page APIs and page summary APIs. Rename test files & exclude query APIs from test to avoid unecessary calls
